change the last save to record file,  and change the function ask_save_jungle to ask_save_file